--- a/RSDKv5.html
+++ b/RSDKv5.html
@@ -3,6 +3,7 @@
 <!--suppress HtmlFormInputWithoutLabel, JSDeprecatedSymbols -->
 <html lang="en-us">
 	<head>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
